# pilot

./: .gitignore  AGENTS.md  README.md  pilot  pyproject.toml
.pilot/: config.json
.pilot/ideas/: 20260214T120219+0000-idea-b82a.json  20260214T120219+0000-idea-b82a.md
.pilot/index/: context.md  manifest.json
.pilot/templates/: agent-rules.md
src/pilot/: __init__.py  audit.py  cli.py  doctor.py  ideas.py  models.py  providers.py  state.py  sync_index.py  verifier.py  workflow.py
tests/: test_audit.py  test_cli_ai_modes.py  test_cli_audit.py  test_cli_auto.py  test_cli_ideas.py  test_cli_sync_verifier.py  test_doctor.py  test_providers.py  test_sync_index.py  test_workflow.py
