[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot-core"
version = "0.1.0"
description = "Provider-neutral workflow engine for coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pilot = "pilot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
